--- a/sass/templates/_comments.sass
+++ b/sass/templates/_comments.sass
@@ -4,6 +4,7 @@
   background-position-y: 26.8%
   background-size: 111.3%
   padding-top: 0rem
+  padding-bottom: 5.6rem
   &__section-title
     margin-bottom: 4.05rem
   &__heading
