--- a/sass/templates/_news.sass
+++ b/sass/templates/_news.sass
@@ -1,5 +1,5 @@
 .news
-  padding-top: 4.79rem
+  padding-top: 4.19rem
   padding-bottom: 6.6rem
   background-color: #e3fbdd
   &__section-title
